# coffee-report

./: .coverage  README.md  pyproject.toml
coffee_report/: cli.py  formatters.py  readers.py
coffee_report.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coffee_report/reports/: __init__.py  average_sleep.py  base.py  median_coffee.py  registry.py
tests/: conftest.py  test_readers.py  test_reports.py
